--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
 
                     <ul class="footer__links">
                         <li>
-                            <a href="#skills" class="footer__link">SKills</a>
+                            <a href="#skills" class="footer__link">Skills</a>
                         </li>
                         <li>
                             <a href="#portfolio" class="footer__link">Portfolio</a>
