error message on page

--- a/index.html
+++ b/index.html
@@ -662,6 +662,12 @@
                             <label for="" class="contact__label">Message</label>
                             <textarea name="message" id="" cols="0" rows="7" class="contact__input" required></textarea>
                         </div>
+
+                        <div class="form-messages">
+                            <p id="sending-message" class="sending-message">Sending...</p>
+                            <p id="error-message" class="text-danger">Error occurred: Try sending an email directly to chad@coderSimp.com</p>
+                            <p id="success-message" class="text-success">Message sent! Expect response withing 24 hours.</p>
+                        </div>
                         
                         <div>
                             <button type="submit" class="button button--flex" style="border: none">
