--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                         <div class="form-messages">
                             <p id="sending-message" class="sending-message">Sending...</p>
                             <p id="error-message" class="text-danger">Error occurred: Try sending an email directly to chad@coderSimp.com</p>
-                            <p id="success-message" class="text-success">Message sent! Expect response withing 24 hours.</p>
+                            <p id="success-message" class="text-success">Message sent! Expect response within 24 hours.</p>
                         </div>
                         
                         <div>
