--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                     <div class="about__data">
                         <p class="about__description">Fullstack developer, with extensive knowledge and years of 
-                            experience working in web technologies. I writing clean, maintainable code and deliver quality work.
+                            experience working in web technologies. I write clean, maintainable code and deliver quality work.
                         </p>
 
                         <div class="about__info">
