remove completed projects

--- a/index.html
+++ b/index.html
@@ -174,14 +174,6 @@
                   experience</span
                 >
               </div>
-
-              <div>
-                <span class="about__info-title">10+</span>
-                <span class="about__info-name"
-                  >Completed <br />
-                  projects</span
-                >
-              </div>
             </div>
 
             <div class="about__buttons">
@@ -300,7 +292,6 @@
                     <h3 class="skills__name">PostgreSQL / PostGIS</h3>
                   </div>
                 </div>
-
               </div>
             </div>
           </div>
@@ -622,7 +613,9 @@
 
                 <div>
                   <h3 class="qualification__title">Full-Stack Developer</h3>
-                  <span class="qualification__subtitle">Norus Technologies</span>
+                  <span class="qualification__subtitle"
+                    >Norus Technologies</span
+                  >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
                     July 2023 - October 2023
