open CV in new tab

--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
             <div class="about__buttons">
               <!--==================== Change your CV ====================-->
               <a
-                download=""
                 href="assets/pdf/Chad-cv.pdf"
                 class="button button--flex"
+                target="_blank"
               >
                 Download CV <i class="uil uil-download-alt button__icon"></i>
               </a>
