--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <body class="dark-theme">
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
-      <nav class="nav container">
+      <nav class="container nav">
         <a href="#" class="nav__logo">coderSimp</a>
 
         <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list grid">
+          <ul class="grid nav__list">
             <li class="nav__item">
               <a href="#home" class="nav__link active-link">
                 <i class="uil uil-estate nav__icon"></i> Home
@@ -76,8 +76,8 @@
     <main class="main">
       <!--==================== HOME ====================-->
       <section class="home section" id="home">
-        <div class="home__container container grid">
-          <div class="home__content grid">
+        <div class="container grid home__container">
+          <div class="grid home__content">
             <div class="home__social">
               <a
                 href="https://www.linkedin.com/in/chadcodes"
@@ -156,7 +156,7 @@
         <h2 class="section__title">About Me</h2>
         <span class="section__subtitle">My introduction</span>
 
-        <div class="about__container container">
+        <div class="container about__container">
           <!-- <img src="assets/img/about.jpg" alt="" class="about__img"> -->
 
           <div class="about__data">
@@ -168,7 +168,7 @@
 
             <div class="about__info">
               <div>
-                <span class="about__info-title">04+</span>
+                <span class="about__info-title">05+</span>
                 <span class="about__info-name"
                   >Years <br />
                   experience</span
@@ -195,7 +195,7 @@
         <h2 class="section__title">Skills</h2>
         <span class="section__subtitle">My technical level</span>
 
-        <div class="skills__container container grid">
+        <div class="container grid skills__container">
           <div>
             <!--=============== SKILLS 1 ===============-->
             <div class="skills__content skills__open">
@@ -210,7 +210,7 @@
                 <i class="uil uil-angle-down skills__arrow"></i>
               </div>
 
-              <div class="skills__list grid">
+              <div class="grid skills__list">
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Angular</h3>
@@ -262,7 +262,7 @@
                 <i class="uil uil-angle-down skills__arrow"></i>
               </div>
 
-              <div class="skills__list grid">
+              <div class="grid skills__list">
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Laravel</h3>
@@ -310,7 +310,7 @@
                 <i class="uil uil-angle-down skills__arrow"></i>
               </div>
 
-              <div class="skills__list grid">
+              <div class="grid skills__list">
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Firebase</h3>
@@ -348,10 +348,10 @@
         <h2 class="section__title">Portfolio</h2>
         <span class="section__subtitle">Most recent work</span>
 
-        <div class="portfolio__container container swiper-container">
+        <div class="container portfolio__container swiper-container">
           <div class="swiper-wrapper">
             <!--=============== ZUZOR ===============-->
-            <div class="portfolio__content grid swiper-slide">
+            <div class="grid portfolio__content swiper-slide">
               <img src="assets/img/zuzor.jpg" alt="" class="portfolio__img" />
 
               <div class="portfolio__data">
@@ -380,7 +380,7 @@
             </div>
 
             <!--=============== ZUZOR ===============-->
-            <!-- <div class="portfolio__content grid swiper-slide">
+            <!-- <div class="grid portfolio__content swiper-slide">
               <img src="assets/img/zuzor.jpg" alt="" class="portfolio__img" />
 
               <div class="portfolio__data">
@@ -409,7 +409,7 @@
             </div> -->
 
             <!--=============== ISLANDROUTES ===============-->
-            <div class="portfolio__content grid swiper-slide">
+            <div class="grid portfolio__content swiper-slide">
               <img
                 src="assets/img/islandroutes.jpg"
                 alt=""
@@ -441,7 +441,7 @@
             </div>
 
             <!--=============== BAHAMAS ===============-->
-            <div class="portfolio__content grid swiper-slide">
+            <div class="grid portfolio__content swiper-slide">
               <img src="assets/img/bahamas.jpg" alt="" class="portfolio__img" />
 
               <div class="portfolio__data">
@@ -467,7 +467,7 @@
             </div>
 
             <!--=============== JAMRENTAL ===============-->
-            <div class="portfolio__content grid swiper-slide">
+            <div class="grid portfolio__content swiper-slide">
               <img
                 src="assets/img/jamrental.jpg"
                 alt=""
@@ -503,7 +503,7 @@
             </div>
 
             <!--=============== FLOWCHART ===============-->
-            <div class="portfolio__content grid swiper-slide">
+            <div class="grid portfolio__content swiper-slide">
               <img
                 src="assets/img/flowchart.png"
                 alt=""
@@ -558,7 +558,7 @@
         <h2 class="section__title">Experience</h2>
         <span class="section__subtitle">My journey</span>
 
-        <div class="qualification__container container">
+        <div class="container qualification__container">
           <div class="qualification__tabs">
             <!-- <div class="qualification__button button--flex qualification__active" data-target="#education">
                             <i class="uil uil-graduation-cap qualification__icon"></i>
@@ -706,7 +706,7 @@
         <h2 class="section__title">Contact Me</h2>
         <span class="section__subtitle">Get in touch</span>
 
-        <div class="contact__container container grid">
+        <div class="container grid contact__container">
           <div>
             <div class="contact__information">
               <i class="uil uil-phone contact__icon"></i>
@@ -725,8 +725,8 @@
             </div>
           </div>
 
-          <form id="contact-form" class="contact__form grid">
-            <div class="contact__inputs grid">
+          <form id="contact-form" class="grid contact__form">
+            <div class="grid contact__inputs">
               <div class="contact__content">
                 <label for="" class="contact__label">Name</label>
                 <input
@@ -787,7 +787,7 @@
     <!--==================== FOOTER ====================-->
     <footer class="footer">
       <div class="footer__bg">
-        <div class="footer__container container grid">
+        <div class="container grid footer__container">
           <div>
             <h1 class="footer__title">Chad</h1>
             <span class="footer__subtitle">Fullstack Developer</span>
