chore: resume update

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 
             <div class="home__data">
               <h1 class="home__title">Hi, I'm Chad</h1>
-              <h3 class="home__subtitle">Full-Stack Developer</h3>
+              <h3 class="home__subtitle">Full-Stack Developer & UI Designer</h3>
               <p class="home__description">
-                High level experience in web development, producing quality
+                High level experience in web development with a strong focus on UI design, producing high-quality
                 work.
               </p>
               <a href="#contact" class="button button--flex">
